improve html template

--- a/vim/template/template.html
+++ b/vim/template/template.html
@@ -1,13 +1,13 @@
-:%substitute/LANGUAGE/\=tolower($LANGUAGE)/ge
-:call cursor(8, 0)
+:call cursor(7, 10)
 <!DOCTYPE html>
-<html lang="LANGUAGE">
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title></title>
 </head>
 <body>
-  
+
 </body>
 </html>
-
